# riklary

./: .env.example  Cargo.toml  index.html
books/extracted/Circle.of.Inevitability.-.Webnovel.Default/EPUB/: content.opf  nav.xhtml  toc.ncx
books/extracted/Circle.of.Inevitability.-.Webnovel.Default/EPUB/styles/: stylesheet1.css
books/extracted/Circle.of.Inevitability.-.Webnovel.Default/EPUB/text/: ch001.xhtml  ch002.xhtml  ch003.xhtml  ch004.xhtml  ch005.xhtml  ch006.xhtml  ch007.xhtml  ch008.xhtml  ch009.xhtml  ch010.xhtml  ch011.xhtml  ch012.xhtml  ch013.xhtml  ch014.xhtml  ch015.xhtml  ch016.xhtml  ch017.xhtml  ch018.xhtml  ch019.xhtml  ch020.xhtml  ch021.xhtml  ch022.xhtml  ch023.xhtml  ch024.xhtml  ch025.xhtml  ch026.xhtml  ch027.xhtml  ch028.xhtml  ch029.xhtml  ch030.xhtml  ch031.xhtml  ch032.xhtml  ch033.xhtml  ch034.xhtml  ch035.xhtml  ch036.xhtml  ch037.xhtml  ch038.xhtml  ch039.xhtml  ch040.xhtml  (+1151 more)
books/extracted/Lord.of.the.Mysteries.-.Webnovel.Default/EPUB/: content.opf  nav.xhtml  toc.ncx
books/extracted/Lord.of.the.Mysteries.-.Webnovel.Default/EPUB/text/: ch001.xhtml  ch002.xhtml  ch003.xhtml  ch004.xhtml  ch005.xhtml  ch006.xhtml  ch007.xhtml  ch008.xhtml  ch009.xhtml  ch010.xhtml  ch011.xhtml  ch012.xhtml  ch013.xhtml  ch014.xhtml  ch015.xhtml  ch016.xhtml  ch017.xhtml  ch018.xhtml  ch019.xhtml  ch020.xhtml  ch021.xhtml  ch022.xhtml  ch023.xhtml  (+1445 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: BottomNav.svelte  Library.svelte  Reader.svelte
src/: main.rs
